--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Zoom Clone using WebRTC and WebSockets",
   "license": "ISC",
+  "type": "module",
   "scripts": {
     "dev": "nodemon"
   },
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "express": "^4.17.3",
+    "path": "^0.12.7",
     "pug": "^3.0.2",
     "socket.io": "^4.5.0",
     "ws": "^8.5.0"
